0.10.0
- API: BlockMode is no longer an enum. Please migrate to eg. CBC() etc...
- Adds AES-GCM support.
- Adds CRC32c support.
- Fixes empty password in PBKDF2.

0.9.0
- Swift 4.1 compatibility
- Added CMAC message authenticator https://tools.ietf.org/html/rfc4493
- Added AEADChaCha20Poly1305 (AEAD_CHACHA20_POLY1305) https://tools.ietf.org/html/rfc7539#section-2.8.1

0.8.3
- Fixes SHA3 padding.
- Fixes Carthage builds.

0.8.2
- Fixes SHA3 partial updates calculations.
- Makes ChaCha20 processing faster again.

0.8.1
- Adds Data(hex:) helper.
- Adds HKDF (HMAC-based Extract-and-Expand Key Derivation Function)
- Prevent ChaCha overflow error

0.8.0
- Adds SHA3 Keccak variants
- Adds String.bytes helper to convert String to array of bytes
- Improves AES performance
- Speeds up compilation times with Swift 4
- Fixes: Blowfish minimum key size is 5
- Removes Ciphers "iv" parameter (value moved to BlockMode)
- BlockMode uses associated value for IV value where apply e.g. .CBC(iv: ivbytes)
- Refactors internal hacks no longer needed with Swift 4

0.7.2
- Adds Padding enum (.pkcs5, .pkcs7, .noPadding, .zeroPadding)
- Removes Generics from the public API.
- Slightly improves SHA1, SHA2, SHA3 performance.
- Update SPM configuration for Swift 4

0.7.1
- Swift 4.0 compatibility release

0.7.0
- Swift 3.2 compatibility release

0.6.9
- Fixed padding issue where padding was not properly added in CTR mode.
- Fixed thrown error on decrypting empty string,
- Fixed CI build script.
- Added String.encryptToBase64()

0.6.8
- Speed up MD5()
- Faster Array(hex:)
- Improve AES performance
- Fix tvOS bitcode
- Fix Blowfish CFB, OFB, CTR block modes.
- Fix Blowfish for 32-bit arch.
- Fix ChaCha20 preconditions

0.6.7
- Release for Xcode 8.2
- Fix playground example

0.6.6
- Rework ChaCha20
- Fix Poly1305

0.6.5
- Significant performance improvement when processing lange amount of data.
- Degeneric functions and change Sequence -> Collection in generic constraints.

0.6.4