@@ -2,6 +2,7 @@
 - API: BlockMode is no longer an enum. Please migrate to eg. CBC() etc...
 - Adds AES-GCM support.
 - Adds CRC32c support.
+- Improves AES variant validation.
 - Fixes empty password in PBKDF2.
 
 0.9.0
